k8Configs/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-demo-nodeport
spec:
  selector:
    app: mytrial
  ports:
    - name: mongo-port
      port: 28017
      targetPort: 28017 # choose a port from the range 30000-32767
      nodePort: 31111
  type: NodePort
# kubectl expose rs go-demo-2 \
#     --name=go-demo-2-svc \
#     --target-port=28017 \
#     --type=NodePort
